pull from experiment version

--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
   "name": "phloemjs",
   "version": "1.0.0",
-  "description": "A mini web framework",
+  "description": "phloemjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thanhntmany/phloemjs.git"
-  },
-  "keywords": [
-    "phloemjs"
-  ],
-  "author": "Thanh Nguyen Thuan <thanhntmany@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/thanhntmany/phloemjs/issues"
-  },
-  "homepage": "https://github.com/thanhntmany/phloemjs#readme"
+  "author": "Thanh Nguyen Thuan <thanhntmany@gmail.com>"
 }
