--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "phloemjs",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Thanh Nguyen Thuan <thanhntmany@gmail.com>"
+  "bin": "./app/cli",
+  "scripts": {},
+  "author": "Thanh Nguyen Thuan <thanhntmany@gmail.com>",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
