--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "phloemjs",
-  "version": "1.1.0",
+  "version": "0.0.1",
   "description": "phloemjs",
   "main": "index.js",
-  "bin": "./app/cli",
+  "bin": {
+    "phloemjs": "app/cli"
+  },
   "scripts": {},
   "author": "Thanh Nguyen Thuan <thanhntmany@gmail.com>",
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {},
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thanhntmany/phloemjs.git"
+  },
+  "keywords": [
+    "ESM"
+  ],
+  "bugs": {
+    "url": "https://github.com/thanhntmany/phloemjs/issues"
+  },
+  "homepage": "https://github.com/thanhntmany/phloemjs#readme"
 }
